<resources>
    <string name="app_name">NMRC Attendance</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Noida Metro</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_previous_reports">PreviousReports</string>
    <string name="title_activity_view_leave_app">ViewLeaveApp</string>
    <string name="title_activity_view_attendance">ViewAttendance</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="new_user_signup">New User? Signup</string>
    <string name="sign_in">SIGN IN</string>
</resources>
